--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.5.1",
     "@mdi/js": "^4.5.95",
     "@mdi/react": "^1.2.1",
+    "accounting": "^0.4.1",
     "lodash": "^4.17.15",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
